[tool.poetry]
name = "howdoi-ui"
version = "0.1.0"
description = ""
authors = ["Lemuel Boyce <lemuelboyce@gmail.com>"]
readme = "README.md"
packages = [{include = "howdoi_ui"}]

[tool.poetry.dependencies]
python = "^3.9"
howdoi = "^2.0.20"
textual-forms = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

